--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,28 @@
-spring.mvc.view.prefix=/static/
-spring.mvc.view.suffix=.html
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+
+# database
+spring.datasource.url=jdbc:mysql://localhost:8889/ca1
+spring.datasource.username=jmccabe
+spring.datasource.password=P1r@t3s!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+
+# Hibernate settings for Jakarta Persistence
+spring.jpa.properties.jakarta.persistence.jdbc.driver=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.jakarta.persistence.jdbc.url=jdbc:mysql://localhost:8889/ca1
+spring.jpa.properties.jakarta.persistence.jdbc.user=jmccabe
+spring.jpa.properties.jakarta.persistence.jdbc.password=P1r@t3s!
+spring.jpa.properties.jakarta.persistence.schema-generation.database.action=update
+spring.jpa.show-sql=true
+
+# Configure error paths and their corresponding error templates
+server.error.path=/error
+server.error.whitelabel.enabled=false
+
+
 
