--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.thymeleaf.mode=HTML
 
 # database
 # spring.datasource.url=jdbc:mysql://localhost:8889/ca1
-spring.datasource.url=jdbc:mysql://10.1.0.5:3306/ca1
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/ca1
 spring.datasource.username=jmccabe
 spring.datasource.password=P1r@t3s!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
