--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 
 # database
-# spring.datasource.url=jdbc:mysql://localhost:8889/ca1
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/ca1
+spring.datasource.url=jdbc:mysql://localhost:8889/ca1
+
 spring.datasource.username=jmccabe
 spring.datasource.password=P1r@t3s!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
